# Habitus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.db  Dockerfile.ml  README.md  docker-compose.yml  pyproject.toml  Ии агент недвижимость.md  Пайплайн бэк — изменения.md
backend/: Dockerfile  go.mod  go.sum
backend/migrations/: 0001_users.up.sql  0002_sessions.up.sql  0003_chats.up.sql  0004_messages.up.sql  0005_chat_searches.down.sql  0005_chat_searches.up.sql  0006_chat_search_results.down.sql  0006_chat_search_results.up.sql  0007_dossier_cache.down.sql  (+1 more)
data/: named_zones.seed.json
docs/: cian-parser.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts  Пайплайн фронт.md
habitus/: cli.py  config.py
scripts/: build_evidence.py  build_golden.py  build_moscow_subset.py  build_zones_geojson.py
tests/: test_area.py  test_cache.py  test_cian_loader.py  test_cian_scraper.py  test_cli_smoke.py  test_config.py  test_document.py  test_dossier.py  test_encode.py  test_enrich.py  test_eval.py  test_evidence.py  test_explain.py  test_geo_agent.py  test_geocode.py  test_incremental.py  test_kaggle_loader.py  test_llm.py  test_nlu.py  test_normalize.py  test_object_qa.py  test_online_schema.py  test_orchestrator.py  test_osm_extract.py  test_pipeline.py  test_preload_models.py  test_proximity.py  test_rerank.py  test_retrieval.py  test_retrieval_db.py  test_schema.py  test_service.py  test_smoke_llm.py  test_windows.py  test_zones.py  test_zones_schema.py
(+189 files in other folders)
