[project]
name = "habitus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "FlagEmbedding>=1.3",
    "geopandas>=1.0",
    "requests>=2.32",
    "kaggle>=1.6",
    "osmium>=3.7",
    "beautifulsoup4>=4.12",
]

[project.scripts]
habitus = "habitus.cli:main"

[dependency-groups]
dev = ["pytest>=8.3", "pytest-postgresql>=6.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
