[project]
name = "habitus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "FlagEmbedding>=1.3",
    "geopandas>=1.0",
    "requests>=2.32",
    "kaggle>=1.6",
    "osmium>=3.7",
    "beautifulsoup4>=4.12",
    "openai>=1.40",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
]

[project.scripts]
habitus = "habitus.cli:main"

[project.optional-dependencies]
trace = ["langfuse>=2.50"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-postgresql>=6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning:fastapi.testclient",
]
